createKey also saves the IV and reads the IV and secret separate